--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-navigator": "^3.1.5"
   }
 }
