--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
+    "prebuild:stag": "rm -rf build-stag && mkdir build-stag",
+    "build:stag": "rollup -c && mv public/build/* build-stag && cp public/favicon.png build-stag && cp -R public/image build-stag",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear --single",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-html": "^0.2.4",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
