--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"env-cmd": "^10.1.0"
+		"env-cmd": "^10.1.0",
+		"sveltekit-i18n": "^2.2.2"
 	}
 }
