--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "sass": "^1.60.0",
+    "sveltekit-i18n": "^2.2.2",
     "sveltestrap": "^5.10.0"
   }
 }
